unpackaged/main/default/objects/FPC_Processor_Equipment__c/FPC_Processor_Equipment__c.object-meta.xml
<CustomObject>
    <description>Current EPP Equipment for Account</description>
    <label>Processor Equipment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Processor Equipment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Processor Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>