unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Accepts_Debit__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Debit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acceptance of debit cards - status</description>
    <inlineHelpText>Check box if merchant accepts debit cards.</inlineHelpText>
    <label>Accepts Debit</label>
    <type>Checkbox</type>
</CustomField>