unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Annual_Savings__c.field-meta.xml
<CustomField>
    <fullName>Annual_Savings__c</fullName>
    <description>Annual savings to customer by processing credit cards with FPC.</description>
    <inlineHelpText>Type in the monthly savings to the customer by processing credit cards with FPC.</inlineHelpText>
    <label>Annual Savings</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>