unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Check_Card_Program_del__c.field-meta.xml
<CustomField>
    <fullName>Check_Card_Program_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check card program- status</description>
    <inlineHelpText>Check box if merchant has a check card program.</inlineHelpText>
    <label>Check Card Program</label>
    <type>Checkbox</type>
</CustomField>