unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Contact_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_del__c</fullName>
    <description>Contact name at software provider</description>
    <inlineHelpText>Type in the contact at the software provider associated with the processing equipment record.</inlineHelpText>
    <label>Contact Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>