unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Contact_Phone_del__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_del__c</fullName>
    <description>Contact phone number of software provider</description>
    <inlineHelpText>Type in the phone number of the software provider associated with the processing equipment record.</inlineHelpText>
    <label>Contact_Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>