unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Description_del__c.field-meta.xml
<CustomField>
    <fullName>Description_del__c</fullName>
    <description>Description of processing equipment.</description>
    <inlineHelpText>Type in a description of the processing equipment associated with this record.</inlineHelpText>
    <label>Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>