unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>Effective date that rate review is good from.</description>
    <inlineHelpText>Type in the date the rate review is effective from.</inlineHelpText>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>