unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Equipment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Notes__c</fullName>
    <description>Notes about the processing equipment.</description>
    <inlineHelpText>Type in any notes about the processing equipment.</inlineHelpText>
    <label>Equipment Notes</label>
    <length>16</length>
    <type>Text</type>
</CustomField>