unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Existing_Fees_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Existing_Fees_Subtotal__c</fullName>
    <description>Subtotal of the customer's existing processing fees.</description>
    <inlineHelpText>Type in the subtotal of the customer's existing processing fees.</inlineHelpText>
    <label>Existing Fees Subtotal</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>