unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Existing_Processor_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Processor_Name__c</fullName>
    <description>Customer's existing processing provider.</description>
    <inlineHelpText>Type in the customer's existing processing provider.</inlineHelpText>
    <label>Existing Processor Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>