unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Price__c</fullName>
    <description>Extended price for the processing equipment.</description>
    <inlineHelpText>Type in the extended per unit cost of the processing equipment.</inlineHelpText>
    <label>Extended Price</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>