unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Gift_Card_Program_del__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Program_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gift card program- status</description>
    <inlineHelpText>Check box if merchant has a gift card program.</inlineHelpText>
    <label>Gift Card Program</label>
    <type>Checkbox</type>
</CustomField>