unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>Grand total of costs related to the processing equipment.</description>
    <inlineHelpText>Type in the grand total of all costs associated with the processing equipment.</inlineHelpText>
    <label>Grand Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>