unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Highest_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Highest_Ticket__c</fullName>
    <description>Highest credit card ticket.</description>
    <inlineHelpText>Type in the highest amount that the customer expects to process in a credit card transaction.</inlineHelpText>
    <label>Highest Ticket</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>