unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/How_Purchased__c.field-meta.xml
<CustomField>
    <fullName>How_Purchased__c</fullName>
    <description>Status of how the processing equipment was purchased</description>
    <inlineHelpText>Pick how the processing equipment was purchased.</inlineHelpText>
    <label>How Purchased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Loaner</fullName>
            </value>
            <value>
                <fullName>Give Away</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>