unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Invoice_Number_del__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_del__c</fullName>
    <label>Invoice Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>