unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Invoice_Number_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invoice number prompt - Status</description>
    <inlineHelpText>Check box if merchant has invoice number prompt.</inlineHelpText>
    <label>Invoice Number Prompt</label>
    <type>Checkbox</type>
</CustomField>