unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/New_Fees_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>New_Fees_Subtotal__c</fullName>
    <description>Subtotal of FPC Processing Fees.</description>
    <inlineHelpText>Type in the subtotal of the customer's fees from FPC's rate review.</inlineHelpText>
    <label>New Fees Subtotal</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>