unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/New_ProcessorID__c.field-meta.xml
<CustomField>
    <fullName>New_ProcessorID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID for the new processing provider in a custom object lookup.</description>
    <inlineHelpText>ID for the new processing provider in a custom object lookup.</inlineHelpText>
    <label>New ProcessorID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Processor Equipment</relationshipLabel>
    <relationshipName>Processor_Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>