unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/New_Rates_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>New_Rates_Subtotal__c</fullName>
    <description>Subtotal of FPC Processing Rates.</description>
    <inlineHelpText>Type in the subtotal of the customer's rates from FPC's rate review.</inlineHelpText>
    <label>New Rates Subtotal</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>