unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/New_Used_del__c.field-meta.xml
<CustomField>
    <fullName>New_Used_del__c</fullName>
    <description>New or used status of processing equipment.</description>
    <inlineHelpText>Pick the status of the processing equipment.</inlineHelpText>
    <label>New Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
            </value>
            <value>
                <fullName>Repaired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>