unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <description>ID for the processing equipment opportunity in a custom object lookup.</description>
    <inlineHelpText>ID for the processing equipment opportunity in a custom object lookup.</inlineHelpText>
    <label>OpportunityID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>