unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <description>Other charges associated with the processing equipment.</description>
    <inlineHelpText>Type in the amount of other charges associated with the processing equipment.</inlineHelpText>
    <label>Other Charges</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>