unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Other_Prompt_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Prompt_Description__c</fullName>
    <description>Description of other prompts</description>
    <inlineHelpText>Type in a description of other prompts the merchant has.</inlineHelpText>
    <label>Other Prompt Description</label>
    <length>64</length>
    <type>Text</type>
</CustomField>