unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Printer_Model_del__c.field-meta.xml
<CustomField>
    <fullName>Printer_Model_del__c</fullName>
    <description>Printer Model record</description>
    <inlineHelpText>Type in the model of printer associated with the processing equipment record.</inlineHelpText>
    <label>Printer Model</label>
    <length>64</length>
    <type>Text</type>
</CustomField>