unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of processing equipment purchased</description>
    <inlineHelpText>Type the quantity of processing equipment purchased.</inlineHelpText>
    <label>Quantity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>