unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Server_Clerk_Prompt_del__c.field-meta.xml
<CustomField>
    <fullName>Server_Clerk_Prompt_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Server / Clerk prompt - status</description>
    <inlineHelpText>Check box if merchant has Server / Clerk prompt.</inlineHelpText>
    <label>Server Clerk Prompt</label>
    <type>Checkbox</type>
</CustomField>