unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges__c</fullName>
    <description>Shipping charges for the processing equipment.</description>
    <inlineHelpText>Type in the shipping charges associated associated with the processing equipment.</inlineHelpText>
    <label>Shipping Charges</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>