unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/TERMINAL_MAKE__c.field-meta.xml
<CustomField>
    <fullName>TERMINAL_MAKE__c</fullName>
    <description>Terminal Make record</description>
    <inlineHelpText>Type in the make of terminal associated with the processing equipment record.</inlineHelpText>
    <label>TERMINAL MAKE</label>
    <length>64</length>
    <type>Text</type>
</CustomField>