unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/TERMINAL_MODEL_del__c.field-meta.xml
<CustomField>
    <fullName>TERMINAL_MODEL_del__c</fullName>
    <description>Terminal Model record</description>
    <inlineHelpText>Type in the model of terminal associated with the processing equipment record.</inlineHelpText>
    <label>TERMINAL MODEL</label>
    <length>64</length>
    <type>Text</type>
</CustomField>