unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Terminal_Year_del__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Year_del__c</fullName>
    <description>Terminal year record</description>
    <inlineHelpText>Type in the year of the terminal</inlineHelpText>
    <label>Terminal Year</label>
    <length>16</length>
    <type>Text</type>
</CustomField>