unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Tip_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Tip_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tip prompt - Status</description>
    <inlineHelpText>Check box if merchant has tip prompt.</inlineHelpText>
    <label>Tip Prompt</label>
    <type>Checkbox</type>
</CustomField>