unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Total_Existing__c.field-meta.xml
<CustomField>
    <fullName>Total_Existing__c</fullName>
    <description>Total existing cost to customer for processing.</description>
    <inlineHelpText>Type in the total existing cost to customer for processing credit cards.</inlineHelpText>
    <label>Total Existing</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>