unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <description>Total Credit Card Volume</description>
    <inlineHelpText>Type in the customer's total credit card volume.</inlineHelpText>
    <label>Total Volume</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>