unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Transaction_Count__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Count__c</fullName>
    <description>Credit card transaction count.</description>
    <inlineHelpText>Type in the total amount of credit card transactions processed by the merchant.</inlineHelpText>
    <label>Transaction Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>