unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Type_in_the_total_amount_of_credit_card__c.field-meta.xml
<CustomField>
    <fullName>Type_in_the_total_amount_of_credit_card__c</fullName>
    <description>Subtotal of the customer's existing processing rates.</description>
    <inlineHelpText>Type in the subtotal of the customer's existing processing rates.</inlineHelpText>
    <label>Existing Rates Subtotal</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>