unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Vendor Name that provided processing equipment</description>
    <inlineHelpText>Type in the vendor who provided the processing equipment.</inlineHelpText>
    <label>Vendor Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>