unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Vendor_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Payment_Amount__c</fullName>
    <description>Amount paid to the processing equipment vendor.</description>
    <inlineHelpText>Type in the amount paid to the processing equipment vendor for the processing equipment.</inlineHelpText>
    <label>Vendor Payment Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>