unpackaged/main/default/objects/FPC_Processor_Equipment__c/fields/Vendor_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Payment_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vendor payment made - status</description>
    <inlineHelpText>Check box if payment has been made to the processing equipment vendor.</inlineHelpText>
    <label>Vendor Payment Made</label>
    <type>Checkbox</type>
</CustomField>